Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 </div>
             </section>
             <!-- POURQUOI NOUS SOUTENIR -->
-            <Section class=" py-5 bg-section" id="soutien">
-                <div class="container">
+            <Section class=" bg-section">
+                <div class="container-section">
                     <h3 class="soutien-title text-center">Pourquoi nous soutenir?</h3>
                     <p class="soutien-text text-center">Parce que chaque action menée est un pas vers une société plus juste et plus <br>
                            humaine.Votre soutien qu'il soit financier , matériel ou bénévole  <br>
@@ -104,7 +104,7 @@
             </Section>
             <!-- A PROPOS DE NOUS-->
             <section class="py-5">
-                <div class="container text-center">
+                <div class="container-propos text-center">
                     <h3 class="text-warning">A propos de nous</h3>
                     <p class="about-text">Nous sommes une association engagée pour le bien-etre des communautés <br>
                          vulnérables.Grace a l'implication de nos bénévoles et donateurs, nous <br>
@@ -125,7 +125,8 @@
                                  <img src="images/kits-scolaire.jpg"  class="action-img" alt="">
                                 <div class="action-body">
                                     <h5>Collecte et distribution de kits scolaires</h5>
-                                    <p>Pour que chaque enfant ait la chance de réuissir a l'école.</p>
+                                    <p>Pour que chaque enfant ait la chance de <br>
+                                                   réuissir a l'école.</p>
                                 </div>
                             </div>
                         </div>
@@ -134,7 +135,8 @@
                                  <img src="images/distribution-ndogou.jpg" class="action-img" alt="">
                                 <div class="action-body">
                                     <h5>Distribution de ndogou pendant le Ramadan</h5>
-                                    <p>Pour permettre aux familles de rompre le jeune dignement et dans la solidarité.</p>
+                                    <p>Pour permettre aux familles de rompre le jeune <br>
+                                               dignement et dans la solidarité.</p>
                                 </div>
                            </div>
                         </div>
@@ -144,8 +146,10 @@
                             <div class="action-card">
                                   <img src="images/set-setal.jpg" class="action-img" alt="">
                                 <div class="action-body">
-                                    <h5>Organisation d'une journée de Set Setal</h5>
-                                    <p>Nous avons organisé une journée de nettoyage communautaire pour rendre notre quartier plus propre et agréable.</p>
+                                    <h5>Organisation d'une journée  de Set Setal</h5>
+                                    <p>Nous avons organisé une journée de nettoyage <br>
+                                         communautaire pour rendre notre quartier <br>
+                                              plus propre et agréable.</p>
                                 </div>
                              </div>
                          </div>
@@ -154,7 +158,8 @@
                                   <img src="images/don-de-sang.jpg" class="action-img" alt="">
                                 <div class="action-body">
                                     <h5>Organisation de dons de sang</h5>
-                                    <p>En collaboration avec des structures sanitaires comme la Croix-Rouge et les hopitaux.</p>
+                                    <p>En collaboration avec des structures sanitaires <br>
+                                         comme la Croix-Rouge et les hopitaux.</p>
                                 </div>
                            </div>
                         </div>
