Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -172,14 +172,24 @@
                </div>
             </section>
             <!-- DEMANDE DE DON -->
-            <section class="don-section">
+            <section class="don-section" style="background-image: url('images/aide.jpg');
+             background-size: cover; 
+             background-position: center;
+              background-repeat: no-repeat;
+               height: 1000px;
+               padding: 30px 15px;
+               position: relative;
+               align-items: center;
+               justify-content: center;
+               min-height: 400px;
+              ">
                 <div class="don-overlay" >
                     <h3>Besoin d'aide ?Faites une demande de don</h3>
                     <p>Notre association est la pour vous accompagner dans les moments <br>
                          difficiles. Si vous traversez une période de précarité ou si vous <br>
                          connaissez quelqu'un dans le besoin , vous pouvez nous adresser <br>
                                              une demande de don.</p>
-                    <a href="#"class=" don-btn">Faire une demande de don</a>
+                    <a href="page-de-don.html"class=" don-btn">Faire une demande de don</a>
                 </div>
                 <!-- REMERCIEMENT -->
                 <section class="merci-section">
@@ -199,37 +209,10 @@
         </div>
     </section>
     <!-- PARTENAIRE -->
-     <div class="container my-5">
-            <h2 class="text-center text-orange">Nos collaborateurs</h2>
-                <div class="underline-white mb-4"></div>
-                    <div id="carousellogos" class="carousel slide" data-bs-ride="carousel">
-                       <div class="carouls-inner text-center">
-                         <div class="carousel-item active">
-                            <img src="images/image-1.jpg" alt="logo1" class="logo-img mx-2">
-                            <img src="images/image-2.jpg" alt="logo2" class="logo-img mx-2">
-                            <img src="images/image-3.jpg" alt="logo3" class="logo-img mx-2">
-                         </div>
-                         <div class="carousel-item">
-                             <img src="images/image-4.jpg" alt="logo4" class="logo-img mx-2">
-                             <img src="images/image-5.jpg" alt="logo5" class="logo-img mx-2">
-                             <img src="images/image-6.jpg" alt="logo6" class="logo-img mx-2">
-                          </div>
-                          <div class="carousel-item">
-                             <img src="images/image-7.jpg" alt="logo7" class="logo-img mx-2">
-                             <img src="images/image-8.jpg" alt="logo8" class="logo-img mx-2">
-                          </div>
-                       </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carousellogos" data-bs-slide="prev">
-                       <span class="carousel-control-prev-icon"></span>
-                    </button> 
-                    <button class="carousel-control-next" type="button" data-bs-target="#carousellogos" data-bs-slide="next">
-                        <span class="carousel-control-next-icon"></span>
-                    </button> 
-        </div>
-     </div>
+     
+           
 <!-- FOOTER -->
-    <footer>
+    <footer style="margin-top: 400px;">
         <div class="row foot" style="background-color: #ff7f00;height: 200px;">
             <div class="col">
                 <img src="images/don-du-coeur.jpg" alt="" class="logo-footer">
@@ -252,7 +235,7 @@
             </div>
             <div class="col">
                 <h4>CONTACTS</h4>
-                <p class="p-footer">+221 33 900 00 00</p>
+                <p class="p-footer">+221 78 450 27 78</p>
                 <p class="p-footer">donducoeur@gmail.com</p>
                 <h4>Suivez nous sur</h4>
                 <img src="images/icone-sociaux_Plan de travail 1.jpg" alt="" class="">
