Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -172,20 +172,11 @@
                </div>
             </section>
             <!-- DEMANDE DE DON -->
-            <section class="don-section" style="background-image: url('images/aide.jpg');
-             background-size: cover; 
-             background-position: center;
-              background-repeat: no-repeat;
-               height: 1000px;
-               padding: 30px 15px;
-               position: relative;
-               align-items: center;
-               justify-content: center;
-               min-height: 400px;
-              ">
-                <div class="don-overlay" >
-                    <h3>Besoin d'aide ?Faites une demande de don</h3>
-                    <p>Notre association est la pour vous accompagner dans les moments <br>
+            <section class="don-section position-relative text-center text-white";>
+                <img src="images/aide.jpg" alt="" class="img-fluid don-background">
+                <div class="don-overlay container" >
+                    <h3 class="fw-bold text-success">Besoin d'aide ?Faites une demande de don</h3>
+                    <p class="text-dark">Notre association est la pour vous accompagner dans les moments <br>
                          difficiles. Si vous traversez une période de précarité ou si vous <br>
                          connaissez quelqu'un dans le besoin , vous pouvez nous adresser <br>
                                              une demande de don.</p>
@@ -231,7 +222,6 @@
                     <li><a href="page-demamde-aide.html" class="footer-menu">Demande d'aide</a></li>
                     <li><a href="page-connexion.html" class="footer-menu">Connexion</a></li>
                 </ul>
-
             </div>
             <div class="col">
                 <h4>CONTACTS</h4>
