--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
              </section>
             <!-- MISSION -->
-            <section class="py-5 bg-white" id="mission">
+            <section id="mission" class="py-5 bg-white" >
                 <div class="container">
                     <div class="row align-items-center">
                       <div class="col-md-6">
@@ -87,7 +87,7 @@
                          humaine et le transparence dans l'utilisation des ressources. </p>
                       </div>
                       <div class="col-md-6 text-center">
-                          <img src="images/mission.jpg" alt="" class="img-fluid rounded ">
+                          <img src="images/mission.jpg" alt="" class="img-fluid mission-img ">
                       </div>
                     </div>
                 </div>
@@ -172,11 +172,11 @@
                </div>
             </section>
             <!-- DEMANDE DE DON -->
-            <section class="don-section position-relative text-center text-white";>
-                <img src="images/aide.jpg" alt="" class="img-fluid don-background">
-                <div class="don-overlay container" >
-                    <h3 class="fw-bold text-success">Besoin d'aide ?Faites une demande de don</h3>
-                    <p class="text-dark">Notre association est la pour vous accompagner dans les moments <br>
+            <section class="don-section">
+                <img src="images/aide.jpg" alt="" class="don-background">
+                <div class="don-overlay" >
+                    <h3>Besoin d'aide ?Faites une demande de don</h3>
+                    <p>Notre association est la pour vous accompagner dans les moments <br>
                          difficiles. Si vous traversez une période de précarité ou si vous <br>
                          connaissez quelqu'un dans le besoin , vous pouvez nous adresser <br>
                                              une demande de don.</p>
