--- a/Nosprojets.html
+++ b/Nosprojets.html
@@ -382,18 +382,10 @@ Dans chaque sachet remis, il y avait bien plus que de la nourriture : un sourire
                     <div class="rim">
                         <div class="testimonial-header">
                             <i class="fas fa-quote-left quote-icon"></i>
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=150&h=150&fit=crop&crop=face" alt="Mamadou Fall" class="testimonial-avatar">
-                            <div class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
+                          
                         </div>
                         <div class="card-body">
                             <p class="testimonial-text"style="font-size: 20px;padding: 20px;">Lorsque j’ai eu besoin d’une transfusion sanguine, je ne savais pas comment j’allais m’en sortir. Heureusement, grâce à l’engagement de Don du Cœur et la mobilisation des donneurs, j’ai reçu le sang dont j’avais besoin pour guérir. Ce soutien a été une véritable bouffée d’oxygène dans une période difficile. Je suis profondément reconnaissant envers tous ceux qui ont contribué à sauver ma vie.</p>
-                            <div class="client-name">Assane Seck</div>
                             <div class="client-position">Bénéficiaire d’une transfusion sanguine, Ndiaganiao</div>
                         </div>
                     </div>
@@ -406,18 +398,10 @@ Dans chaque sachet remis, il y avait bien plus que de la nourriture : un sourire
                     <div class="card rim">
                         <div class="testimonial-header">
                             <i class="fas fa-quote-left quote-icon"></i>
-                            <img src="images/man-613601_1280.jpg" alt="Mamadou Fall" class="testimonial-avatar">
-                            <div class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
+
                         </div>
                         <div class="card-body">
                             <p class="testimonial-text"style="font-size: 20px;">Don du Cœur nous a apporté un soutien précieux avec la distribution de denrées alimentaires. Cette aide a vraiment fait la différence pour ma famille, en nous offrant un peu de répit et beaucoup d’espoir dans ces moments difficiles.Ce geste de solidarité a été une véritable bouffée d’espoir, redonnant force et courage à toute ma famille.Je suis profondément reconnaissant pour cette aide qui a fait une réelle différence dans nos vies. </p>
-                            <div class="client-name">Mamadou Fall</div>
                             <div class="client-position"> Bénéficiaire de l’aide alimentaire , Bambilor</div>
                         </div>
                     </div>
@@ -428,19 +412,11 @@ Dans chaque sachet remis, il y avait bien plus que de la nourriture : un sourire
                     <div class="card rim">
                         <div class="testimonial-header">
                             <i class="fas fa-quote-left quote-icon"></i>
-                            <img src="images/photo.1566224.jpeg" alt="Fatou Sow" class="testimonial-avatar">
-                            <div class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
+                           
                         </div>
                         <div class="card-body">
                             <p class="testimonial-text"style="font-size: 20px;">Grâce à Don du Cœur, mes enfants ont pu commencer l’année scolaire avec tout ce dont ils avaient besoin : des cahiers, des stylos, des sacs… Des choses simples, mais qui pour nous représentent tellement. Voir leurs sourires et leur fierté à l’idée d’aller à l’école avec dignité m’a profondément touchée. Cela m’a aussi redonné de l’espoir, car je sais qu’avec un peu d’aide, même dans les moments difficiles, un avenir meilleur est possible pour eux.</p>
-                            <div class="client-name">Fatou Sow</div>
-                            <div class="client-position">Mère de 4 enfants, Tienaba</div>
+                            <div class="client-position">Bénéficiaire, Mère de 4 enfants, Tienaba</div>
                         </div>
                     </div>
                 </div>
