--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+     <style>
+        
+@media (max-width: 768px) {
+  .footer-main {
+    flex-direction: column !important;
+    text-align: center !important;
+  }
+}
+</style>
     <!-- Navigation -->
     <nav class="entete">
         <img src="images/don-du-coeur.jpg" alt="Logo Don du Cœur" class="logo">
@@ -26,46 +35,51 @@
             <a href="page_a_propos.html" class="menu">À propos de nous</a>
             <a href="Nosprojets.html" class="menu">Nos projets</a>
             <a href="page_de_don.html" class="menu">Faire un don</a>
-            <a href="page-demande-aide.php" class="menu">Demande d'aide</a>
-            <a href="page-connexion.html" class="menu">Connexion</a>
+            <a href="page_demande_aide.html" class="menu">Demande d'aide</a>
+            <a href="connexion.html" class="menu">Connexion</a>
         </div>
     </nav>
 
     <!-- Banner -->
     <div class="banner">
         <div class="banner-content">
-            <h1 class="display-4 titrebanner">Bienvenue sur don du coeur</h1>
+            <h1 class="display-4 titrebanner">Bienvenue sur Don du Coeur</h1>
             <p class="lead">Ensemble, semons la solidarité et récoltons l'espoir.</p>
         </div>
     </div>
 
     <!-- Stats Section -->
-    <section class="stats-section py-5 bg-white">
+      <section class="stats-section">
         <div class="container">
-            <div class="row text-center g-4">
-                <div class="col-12 col-md-4">
-                    <div class="border border-success rounded p-4 h-100 border-thick">
-                        <h2 class="fw-bold">+85</h2>
-                        <p class="mb-0 text-uppercase">Donations</p>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="stat-item  w-100">
+                        <span class="stat-number" data-target="92">0</span>
+                        <div class="stat-label">Familles Aidées</div>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
-                    <div class="border border-success rounded p-4 h-100 border-thick">
-                        <h2 class="fw-bold">+50</h2>
-                        <p class="mb-0 text-uppercase">Projets Réalisés</p>
+                <div class="col-lg-3 col-md-6">
+                    <div class="stat-item  w-100">
+                        <span class="stat-number" data-target="85">0</span>
+                        <div class="stat-label">Donateurs Actifs</div>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
-                    <div class="border border-success rounded p-4 h-100 border-thick">
-                        <h2 class="fw-bold">+36</h2>
-                        <p class="mb-0 text-uppercase">Volontaires</p>
+                <div class="col-lg-3 col-md-6">
+                    <div class="stat-item w-100">
+                        <span class="stat-number" data-target="36">0</span>
+                        <div class="stat-label">volontaires</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="stat-item  w-100">
+                        <span class="stat-number" data-target="50">0</span>
+                        <div class="stat-label">Projets Réalisés</div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
+   
     <!-- Carrousel Section -->
     <section class="urgence-section text-center py-5">
         <div class="container">
@@ -98,8 +112,8 @@
                                 <p>Nous organisons cette collecte en faveur des daaras, avec pour objectif de garantir à
                                     chaque
                                     enfant un accès à des vêtements propres, adaptés et dignes.</p>
-                                <button class="btn btn-orange">Je soutiens ce projet</button>
-                            </div>
+                          <a href="page_de_don.php" class="btn btn-orange">Je soutiens ce projet</a>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -114,10 +128,10 @@
                         <div class="col-lg-6 col-md-12">
                             <div class="appel-box text-start h-100">
                                 <h5 class="fw-bold text-orange titlecarou mb-3">Paiement ordonnance pour une dame</h5>
-                                <p class="mb-3">Type de dons: Argents <br>But : 120.000 fcfa <br>------------------</p>
+                                <p class="mb-3">Type de dons: Argents <br>Objectif : 120.000 fcfa <br>------------------</p>
                                 <p>Une femme en détresse a besoin de votre aide pour obtenir ses médicaments.
                                     Votre don servira à régler une ordonnance urgente et vitale.</p>
-                                <button class="btn btn-orange">Je soutiens ce projet</button>
+                               <a href="page_de_don.php" class="btn btn-orange">Je soutiens ce projet</a>
                             </div>
                         </div>
                     </div>
@@ -137,7 +151,8 @@
                                     <br>------------------</p>
                                 <p>Nous envisageons de créer un espace de jeux sécurisé,
                                     offrant aux enfants un lieu propice à l'apprentissage et au développement.</p>
-                                <button class="btn btn-orange">Je soutiens ce projet</button>
+                                <a href="page_de_don.php" class="btn btn-orange">Je soutiens ce projet</a>
+
                             </div>
                         </div>
                     </div>
@@ -228,7 +243,7 @@
             </div>
         </div>
         <div class="text-center mt-4">
-            <a href="page_a_propos.html" class="btn-don">En savoir plus</a>
+            <a href="Nosprojets.html" class="btn-don">En savoir plus</a>
         </div>
     </div>
 
@@ -289,9 +304,9 @@
     </div>
  </div>
     <!-- Footer -->
-    <footer class="bg-orange text-white py-5">
+   <footer class="bg-orange text-white py-5">
         <div class="container">
-            <div class="row g-4">
+            <div class="row g-4 ms-lg-5" >
                 <div class="col-lg-4 col-md-6 col-12 text-center text-md-start">
                     <img src="images/don-du-coeur.jpeg" alt="Logo Don du Cœur" class="logo-footer mb-3">
                     <p class="texte-footer">
@@ -300,20 +315,15 @@
                     </p>
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-12 text-center text-md-start">
+                <div class="col-lg-4 col-md-6 col-12 text-center text-md-start ">
                     <h4 class="fw-bold mb-3" style="font-size: 2rem;">Liens utiles</h4>
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="footer-menu text-white text-decoration-none">Accueil</a></li>
-                        <li><a href="page_a_propos.html" class="footer-menu text-white text-decoration-none">À propos de
-                                nous</a></li>
-                        <li><a href="page-nos-projets.html" class="footer-menu text-white text-decoration-none">Nos
-                                projets</a></li>
-                        <li><a href="page_de_don.html" class="footer-menu text-white text-decoration-none">Faire un
-                                don</a></li>
-                        <li><a href="page-demande-aide.html" class="footer-menu text-white text-decoration-none">Demande
-                                d'aide</a></li>
-                        <li><a href="page-connexion.html"
-                                class="footer-menu text-white text-decoration-none">Connexion</a></li>
+                        <li><a href="page_a_propos.html" class="footer-menu text-white text-decoration-none">À propos de nous</a></li>
+                        <li><a href="Nosprojets.html" class="footer-menu text-white text-decoration-none">Nos projets</a></li>
+                        <li><a href="page_de_don.php" class="footer-menu text-white text-decoration-none">Faire un don</a></li>
+                        <li><a href="page_demande_aide.php" class="footer-menu text-white text-decoration-none">Demande d'aide</a></li>
+                        <li><a href="connexion.php" class="footer-menu text-white text-decoration-none">Connexion</a></li>
                     </ul>
                 </div>
 
@@ -331,6 +341,9 @@
                 </div>
             </div>
         </div>
+         <div class="col text-center">
+                <p class="text-center">© 2025 Don du Coeur. Tous droits réservés.</p>
+            </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -376,6 +389,39 @@
                 menu.classList.remove("active");
             }
         });
+    </script>
+    <script>
+         // === 9. COMPTEURS STATISTIQUES ===
+    const counters = document.querySelectorAll('.stat-number');
+
+    const animateCount = (el) => {
+        const target = +el.getAttribute('data-target');
+        const speed = 200;
+        const increment = target / speed;
+        let count = 0;
+
+        const update = () => {
+            if (count < target) {
+                count += increment;
+                el.textContent = '+' + Math.ceil(count);
+                requestAnimationFrame(update);
+            } else {
+                el.textContent = '+' + target;
+            }
+        };
+        update();
+    };
+
+    const observer = new IntersectionObserver((entries, obs) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                animateCount(entry.target);
+                obs.unobserve(entry.target);
+            }
+        });
+    }, { threshold: 0.6 });
+
+    counters.forEach(counter => observer.observe(counter));
     </script>
 </body>
 
